Fixing weird spacing

--- a/style.css
+++ b/style.css
@@ -45,5 +45,5 @@ canvas {
     font-weight: 600;
     color: #334;
     text-align: center;
-    margin-top: 15pt;
+    /* margin-top: 15pt; */
 }
